--- a/package.json
+++ b/package.json
@@ -7,5 +7,10 @@
     "test": "mocha"
   },
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "cheerio": "^0.19.0",
+    "request": "^2.67.0",
+    "yargs": "^3.31.0"
+  }
 }
