--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "async": "^1.5.0",
     "cheerio": "^0.19.0",
     "request": "^2.67.0",
     "yargs": "^3.31.0"
