--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "async": "^1.5.0",
     "cheerio": "^0.19.0",
     "request": "^2.67.0",
+    "sorted-object": "^1.0.0",
     "yargs": "^3.31.0"
   }
 }
