--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "async": "^1.5.0",
     "cheerio": "^0.19.0",
+    "json-schema-generator": "^2.0.3",
     "request": "^2.67.0",
     "sorted-object": "^1.0.0",
     "yargs": "^3.31.0"
