--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "deep-sort-object": "^1.0.1",
     "json-schema-generator": "^2.0.3",
     "request": "^2.67.0",
-    "swagger-cli": "^1.0.0-beta.2",
+    "swagger-cli": "^2.1.3",
+    "swagger-spec-validator": "^3.0.0",
     "yargs": "^3.31.0"
   },
   "bin": {
