--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cheerio": "^0.19.0",
     "deep-sort-object": "^1.0.1",
     "json-schema-generator": "^2.0.3",
+    "lodash": "^4.17.11",
     "request": "^2.67.0",
     "swagger-cli": "^2.1.3",
     "swagger-spec-validator": "^3.0.0",
